[gd_scene load_steps=22 format=3 uid="uid://hdaric1ljtm8"]

[ext_resource type="PackedScene" uid="uid://dr15cno2k6wor" path="res://scn/looper/loop_creator.tscn" id="1_pg0th"]
[ext_resource type="PackedScene" uid="uid://c76vvidqdhkfv" path="res://scn/player/player.tscn" id="2_s5sbg"]
[ext_resource type="PackedScene" uid="uid://h45u7yc7ebec" path="res://scn/looper/bonusloop.tscn" id="3_kyvoq"]
[ext_resource type="PackedScene" uid="uid://bqcfh42i4p2o2" path="res://scn/peon/peon.tscn" id="4_nafer"]
[ext_resource type="Script" path="res://scn/Spawner.gd" id="5_x6ngf"]
[ext_resource type="PackedScene" uid="uid://cmiw1kbj64eqd" path="res://component/cameraman.tscn" id="6_482wo"]
[ext_resource type="Script" path="res://scn/Match_mng.gd" id="7_hdea7"]
[ext_resource type="Texture2D" uid="uid://dtpgoepoprx4w" path="res://scn/deco/sol2.png" id="9_lbjql"]
[ext_resource type="Texture2D" uid="uid://yj3hwrfeu56a" path="res://scn/deco/sol.png" id="10_hdg7c"]
[ext_resource type="Texture2D" uid="uid://48i7hxachut" path="res://scn/deco/sol4.png" id="11_dgnan"]
[ext_resource type="Texture2D" uid="uid://c678uinp8ieja" path="res://scn/deco/sol5.png" id="12_i7pas"]
[ext_resource type="Texture2D" uid="uid://bd1dk55ux627h" path="res://scn/deco/sold3.png" id="13_ij5lf"]
[ext_resource type="PackedScene" uid="uid://cg6630om41iim" path="res://scn/deco/bloc.tscn" id="15_648v7"]
[ext_resource type="PackedScene" uid="uid://bbmvmhmfdh161" path="res://scn/deco/bloc2.tscn" id="16_kwroa"]
[ext_resource type="PackedScene" uid="uid://7kuu5fq7a2wf" path="res://scn/deco/terrain_main.tscn" id="17_eq0ku"]
[ext_resource type="PackedScene" uid="uid://dtdmcruhckx21" path="res://scn/deco/sol.tscn" id="18_hjfce"]
[ext_resource type="PackedScene" uid="uid://74dfmkn1ccg3" path="res://scn/peon/argn.tscn" id="18_nlstm"]
[ext_resource type="PackedScene" uid="uid://rttlanujq5ej" path="res://scn/deco/mur.tscn" id="18_ql6ye"]
[ext_resource type="Script" path="res://scn/fx/audio_effect.gd" id="19_ldnyu"]
[ext_resource type="AudioStream" uid="uid://ce5dibl65e0hg" path="res://audio/dedmobA.wav" id="20_mjl0t"]
[ext_resource type="AudioStream" uid="uid://bewgehiadnke5" path="res://audio/dedmobB.wav" id="21_nbrhv"]

[node name="Main" type="Node2D"]
y_sort_enabled = true

[node name="LoopCreator" parent="." instance=ExtResource("1_pg0th")]

[node name="Player" parent="." instance=ExtResource("2_s5sbg")]

[node name="spawn_loulou" type="Node2D" parent="."]
position = Vector2(604, 322)
script = ExtResource("5_x6ngf")
to_spawn = ExtResource("4_nafer")
spwn_pt = Array[Vector2]([Vector2(-500, -500), Vector2(1500, -500), Vector2(-500, 1000), Vector2(1500, 1000), Vector2(1500, 0), Vector2(500, -500), Vector2(500, 1200)])

[node name="Timer" type="Timer" parent="spawn_loulou"]
wait_time = 3.0

[node name="spwn_arg" type="Node2D" parent="."]
position = Vector2(604, 322)
script = ExtResource("5_x6ngf")
to_spawn = ExtResource("18_nlstm")
spwn_pt = Array[Vector2]([Vector2(-500, -500), Vector2(1500, -500), Vector2(-500, 1000), Vector2(1500, 1000), Vector2(1500, 0), Vector2(500, -500), Vector2(500, 1200)])

[node name="Timer" type="Timer" parent="spwn_arg"]
wait_time = 3.0

[node name="spawn_bonus" type="Node2D" parent="."]
position = Vector2(600, 322)
script = ExtResource("5_x6ngf")
to_spawn = ExtResource("3_kyvoq")
spwn_pt = Array[Vector2]([Vector2(0, 250), Vector2(1000, -250), Vector2(750, 500)])

[node name="Timer" type="Timer" parent="spawn_bonus"]
autostart = true

[node name="cameraman" parent="." instance=ExtResource("6_482wo")]

[node name="Vic" parent="cameraman/Control/GO" index="2"]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 515.0
offset_bottom = 142.0

[node name="manager" type="Node" parent="."]
script = ExtResource("7_hdea7")
n_peon = 35

[node name="Timer" type="Timer" parent="manager"]
wait_time = 2.0
autostart = true

[node name="Node2D" type="Node2D" parent="."]
z_index = -12
position = Vector2(546, -1410)

[node name="Sol2" type="Sprite2D" parent="Node2D"]
position = Vector2(-470, 1933)
texture = ExtResource("9_lbjql")

[node name="Sol3" type="Sprite2D" parent="Node2D"]
position = Vector2(-160, 1495)
texture = ExtResource("9_lbjql")
flip_h = true

[node name="Sol4" type="Sprite2D" parent="Node2D"]
position = Vector2(480, 1787)
texture = ExtResource("9_lbjql")

[node name="Sol5" type="Sprite2D" parent="Node2D"]
position = Vector2(-162, 2068)
texture = ExtResource("9_lbjql")

[node name="Sol6" type="Sprite2D" parent="Node2D"]
position = Vector2(559, 1969)
texture = ExtResource("9_lbjql")

[node name="Sol" type="Sprite2D" parent="Node2D"]
position = Vector2(-457, 1777)
texture = ExtResource("10_hdg7c")

[node name="Sol7" type="Sprite2D" parent="Node2D"]
position = Vector2(137, 1536)
texture = ExtResource("9_lbjql")

[node name="Sol8" type="Sprite2D" parent="Node2D"]
position = Vector2(-212, 1658)
texture = ExtResource("10_hdg7c")

[node name="Sol9" type="Sprite2D" parent="Node2D"]
position = Vector2(354, 1914)
texture = ExtResource("10_hdg7c")

[node name="Sol10" type="Sprite2D" parent="Node2D"]
position = Vector2(6, 1703)
texture = ExtResource("10_hdg7c")

[node name="Sol11" type="Sprite2D" parent="Node2D"]
position = Vector2(138, 1959)
texture = ExtResource("10_hdg7c")

[node name="Sol12" type="Sprite2D" parent="Node2D"]
position = Vector2(589, 1640)
texture = ExtResource("10_hdg7c")
flip_h = true

[node name="Sol13" type="Sprite2D" parent="Node2D"]
position = Vector2(-138, 2160)
texture = ExtResource("11_dgnan")

[node name="Sol14" type="Sprite2D" parent="Node2D"]
position = Vector2(89, 2212)
texture = ExtResource("12_i7pas")

[node name="Sol15" type="Sprite2D" parent="Node2D"]
position = Vector2(-542, 1467)
texture = ExtResource("12_i7pas")

[node name="Sol16" type="Sprite2D" parent="Node2D"]
position = Vector2(-1048, 1178)
texture = ExtResource("12_i7pas")

[node name="Sold3" type="Sprite2D" parent="Node2D"]
position = Vector2(-352, 2108)
texture = ExtResource("13_ij5lf")

[node name="merde" type="Node2D" parent="."]

[node name="Terrain" parent="." instance=ExtResource("17_eq0ku")]
position = Vector2(-120, -224)
scale = Vector2(1.17058, 1.17058)

[node name="Bloc" parent="." instance=ExtResource("15_648v7")]
position = Vector2(-240, 472)

[node name="Bloc3" parent="." instance=ExtResource("15_648v7")]
position = Vector2(1279, 904)

[node name="Bloc4" parent="." instance=ExtResource("15_648v7")]
position = Vector2(527, 451)

[node name="Bloc5" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(-288, -67)

[node name="Bloc7" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(-308, 1065)

[node name="Sol" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(-204, -346)

[node name="Sol2" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(-225, 250)

[node name="Sol3" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(-234, 814)

[node name="Sol4" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(902, 805)

[node name="Sol5" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(1243, -373)

[node name="Sol6" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(617, -391)

[node name="Sol7" parent="." instance=ExtResource("18_hjfce")]
position = Vector2(1249, 565)

[node name="Mur" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(-395, 544)

[node name="Mur2" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(-193, 437)

[node name="Mur3" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(-86, 373)

[node name="Mur5" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(603, -356)

[node name="Mur6" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(1324, 289)

[node name="Bloc9" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(1428, 214)

[node name="Bloc11" parent="." instance=ExtResource("15_648v7")]
position = Vector2(1260, -329)

[node name="Bloc12" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(966, 76)

[node name="Bloc13" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(427, -110)

[node name="Bloc14" parent="." instance=ExtResource("16_kwroa")]
position = Vector2(466, 967)

[node name="Bloc15" parent="." instance=ExtResource("15_648v7")]
position = Vector2(158, -472)

[node name="Mur7" parent="." instance=ExtResource("18_ql6ye")]
position = Vector2(-551, -430)

[node name="mob" type="AudioStreamPlayer" parent="."]
bus = &"sfx"
script = ExtResource("19_ldnyu")
audio_clips = Array[AudioStream]([ExtResource("20_mjl0t"), ExtResource("21_nbrhv")])
pitch_distortion = 0.2

[connection signal="dead" from="Player" to="manager" method="_on_player_dead"]
[connection signal="pv_lost" from="Player" to="cameraman/Camera2D" method="doShake"]
[connection signal="sbonus" from="Player" to="LoopCreator" method="_on_player_sbonus"]
[connection signal="timeout" from="spawn_loulou/Timer" to="spawn_loulou" method="_on_timer_timeout"]
[connection signal="timeout" from="spwn_arg/Timer" to="spwn_arg" method="_on_timer_timeout"]
[connection signal="timeout" from="spawn_bonus/Timer" to="spawn_bonus" method="_on_timer_timeout"]
[connection signal="pressed" from="cameraman/Control/GO/replay" to="manager" method="replay"]
[connection signal="pressed" from="cameraman/Control/replay2" to="manager" method="replay"]
[connection signal="sloose" from="manager" to="cameraman/Control/GO" method="set_visible" binds= [true]]
[connection signal="swin" from="manager" to="cameraman/Control/Vic" method="set_visible" binds= [true]]
[connection signal="undemoin" from="manager" to="cameraman/Camera2D" method="doShake"]
[connection signal="undeplus" from="manager" to="mob" method="play_sound"]
[connection signal="timeout" from="manager/Timer" to="manager" method="on_tick"]

[editable path="cameraman"]
